--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -1,13 +1,21 @@
 name: pyimp-yaml
 on: [push]
 jobs:
-  install:
-  runs-on: ubuntu-latest
+  pytest:
+    runs-on: ubuntu-latest
+    uses: actions/checkout@v2
+
     steps:
-      - name: install dependencies
-        run: echo "echo command runs"
-          #pip3 install pipenv
-          #pipenv shell
-          #pipenv install
-      - name: run main
-        run: pipenv run python main.py
+    - name: set up python
+      uses: actions/setup-python@v2
+      with: python-version: 3.8
+
+    - name: install dependencies
+      # the -m flag means to use the specified python interpreter, here 3.8
+      run: |
+        python -m pip install --upgrade pipenv
+        # deploy ensures packages are properly locked in Pipfile.lock, and aborts if the lock file is out-of-date
+        pipenv install --deploy 
+    - name: Test with pytest
+      run: |
+        pipenv run pytest --cov-report term
