--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
     - name: set up python
-      uses: actions/checkout@v2
+      # uses: actions/checkout@v2
       uses: actions/setup-python@v2
       with: python-version:3.8
 
