github actions test

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - name: set up python
-      # uses: actions/checkout@v2
-      uses: actions/setup-python@v2
-      with: python-version:3.8
+      uses: actions/setup-python@v3
+      with: python-version: '3.8'
 
     - name: install dependencies
       # the -m flag means to use the specified python interpreter, here 3.8
