github actions test

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -13,8 +13,8 @@ jobs:
 
       - name: set up python
         uses: actions/setup-python@v3
-	      with: python-version: '3.8'
-
+        with:
+          python-version: '3.x'
       - name: install dependencies
         run: |
           # the -m flag means to use the specified python interpreter, here 3.8
