--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -17,9 +17,8 @@ jobs:
           python-version: '3.x'
 
       - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: python -m pip install --upgrade pipenv
+        run: pipenv install
 
     	- name: test with pytest
         run: pipenv run pytest --cov-report term
