github actions test

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -10,19 +10,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python
+    - name: set up Python
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Install dependencies
+
+    - name: install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Test with pytest
+        python -m pip install --upgrade pipenv
+        pipenv install --deploy
+
+    - name: test with pytest
       run: |
         pip install pytest
         pip install pytest-cov
-        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
 # name: Python package
 # 
