--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: '3.9'
 
     - name: install dependencies
       run: |
