github actions test

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -24,6 +24,7 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-cov
+        pipenv shell
         pytest test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
 # name: Python package
