--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -24,26 +24,5 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-cov
-        pipenv run pytest test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pipenv run pytest test.py
 
-# name: Python package
-# 
-# on: [push]
-# 
-# jobs:
-#   build:
-# 
-#     runs-on: ubuntu-latest
-# 
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: Set up Python 3.x
-#         uses: actions/setup-python@v3
-#         with:
-#           # Semantic version range syntax or exact version of a Python version
-#           python-version: '3.x'
-#           # Optional - x64 or x86 architecture, defaults to x64
-#           architecture: 'x64'
-#       # You can test your matrix by printing the current Python version
-#       - name: Display Python version
-#         run: python -c "import sys; print(sys.version)"
